--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     function preload ()
     {
-        this.load.setBaseURL('http://labs.phaser.io');
+        this.load.setBaseURL('');
 
-        this.load.image('sky', 'assets/skies/space3.png');
-        this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-        this.load.image('red', 'assets/particles/red.png');
+        this.load.image('sky', 'http://labs.phaser.io/assets/skies/space3.png');
+        this.load.image('logo', 'https://github.com/JayReyesUnity/CILSpring2021/raw/main/assets/Self%20Portrait.png');
+        this.load.image('red', 'http://labs.phaser.io/assets/particles/red.png');
     }
 
     function create ()
