--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         this.load.setBaseURL('');
 
         this.load.image('sky', 'http://labs.phaser.io/assets/skies/space3.png');
-        this.load.image('logo', 'https://github.com/JayReyesUnity/CILSpring2021/raw/main/assets/Self%20Portrait.png');
+        this.load.image('logo', './assets/Self Portrait.png');
         this.load.image('red', 'http://labs.phaser.io/assets/particles/red.png');
     }
 
