--- a/index.html
+++ b/index.html
@@ -4,56 +4,13 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 </head>
 <body>
-
-    <script>
-    var config = {
-        type: Phaser.AUTO,
-        width: 800,
-        height: 600,
-        physics: {
-            default: 'arcade',
-            arcade: {
-                gravity: { y: 200 }
-            }
-        },
-        scene: {
-            preload: preload,
-            create: create
-        }
-    };
-
-    var game = new Phaser.Game(config);
-
-    function preload ()
-    {
-        this.load.setBaseURL('');
-
-        this.load.image('sky', 'http://labs.phaser.io/assets/skies/space3.png');
-        this.load.image('logo', './assets/Self Portrait.png');
-        this.load.image('red', 'http://labs.phaser.io/assets/particles/red.png');
+    <style media='screen' type='text/css'>
+    @font-face {
+        font-family: dyslexia-mono;
+        src: url('font/OpenDyslexicMono-Regular.otf');
     }
-
-    function create ()
-    {
-        this.add.image(400, 300, 'sky');
-
-        var particles = this.add.particles('red');
-
-        var emitter = particles.createEmitter({
-            speed: 100,
-            scale: { start: 1, end: 0 },
-            blendMode: 'ADD'
-        });
-
-        var logo = this.physics.add.image(400, 100, 'logo');
-
-        logo.setVelocity(100, 200);
-        logo.setBounce(1, 1);
-        logo.setCollideWorldBounds(true);
-
-        emitter.startFollow(logo);
-    }
-    </script>
-
+    </style>
+    <div style="font-family:dyslexia-mono; position:absolute; left:-1000px; visibility:hidden;">.</div>
+    <script type="text/javascript" src="js\index.js"></script>
 </body>
 </html>
